# rinetd-uv

./: .dockerignore  .gitignore  BUILD.md  CHANGES.md  DOCUMENTATION.md  Dockerfile  Makefile.am  README.md  UDP-TIMEOUT-ARCH.md  bootstrap  configure.ac  generate-conf.sh  generate-html.sh  generate-manpage.sh  index.html  rinetd-uv.8  rinetd-uv.conf  rinetd1.conf
.github/workflows/: build.yml
src/: Makefile.am  getopt.c  getopt.h  match.c  match.h  net.c  net.h  parse.c  parse.peg  rinetd-uv  rinetd.c  rinetd.h  types.h
test/: test_dns_forwarding.py  test_include_directives.py  test_parallel_connections.py
test/fixtures/includes/: basic-included.conf  circular-a.conf  circular-b.conf  deep-01.conf  deep-02.conf  deep-03.conf  deep-04.conf  deep-05.conf  deep-06.conf  deep-07.conf  deep-08.conf  deep-09.conf  deep-10.conf  deep-11.conf  main-basic.conf  main-wildcard.conf  nested-1.conf  nested-2.conf  nested-3.conf  nomatch.conf
test/fixtures/includes/relative/: parent.conf
test/fixtures/includes/relative/subdir/: child.conf
test/fixtures/includes/wildcard/: server1.conf  server2.conf  server3.conf
